k8s/overlays/production/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nawhas-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
      - api.nawhas.com
      - nawhas.com
      - www.nawhas.com
      - search.nawhas.com
      secretName: nawhas-tls
  rules:
    - host: api.nawhas.com
      http:
        paths:
          - backend:
              serviceName: api-nginx
              servicePort: 80
    - host: nawhas.com
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 3000
    - host: search.nawhas.com
      http:
        paths:
          - backend:
              serviceName: search
              servicePort: 7700
